--- a/src/main/resources/templates/sign_up.html
+++ b/src/main/resources/templates/sign_up.html
@@ -159,7 +159,7 @@
                                             <input type="text" placeholder="Số điện thoại" pattern="^[0-9]{10,11}$"th:field="*{customer.phone}" >
                                             <label>Địa chỉ </label>
                                             <input type="text" placeholder="Địa chỉ" th:field="*{customer.address}" >
-                                            <label>Ngày sinh </label>
+                                            <label>Ngày sinh(*) </label>
                                             <input type="date" placeholder="Ngày sinh" th:field="*{customer.birthday}" >
                                             <label>Ảnh đại diện </label>
                                             <input type="file" name="image" id="image" max-file-size="5.120"
