--- a/src/main/resources/templates/admin_promotion_add.html
+++ b/src/main/resources/templates/admin_promotion_add.html
@@ -99,10 +99,13 @@
                                        name="remainapply" placeholder="Nhập số lượng..." id="remainapply" value="" required>
                             </div>
                             <div class="form-group">
-                                <label>Trạng thái</label>
-                                <input th:field="*{status}" type="text" class="form-control"
-                                       name="status" placeholder="Chọn trạng thái..." id="status" value="" required>
+                                <label for="status">Trạng thái...</label>
+                                <select th:field="*{status}" class="form-control" id="status" name="status" required>
+                                    <option value="1" th:selected="${status == 1}">Enable</option>
+                                    <option value="0" th:selected="${status == 0}">Disable</option>
+                                </select>
                             </div>
+
                             <div class="form-group">
                                 <label>Mã</label>
                                 <input th:field="*{code}" type="text" class="form-control"
@@ -110,8 +113,8 @@
                             </div>
                             <span th:text="${alert}" style="color:red"></span>
                             <br>
-                            <button type="submit" class="btn btn-primary">Save</button>
-                            <a class="btn btn-primary" href="/admin/listPromotions">Display List Promotion</a>
+                            <button type="submit" class="btn btn-primary">Lưu</button>
+                            <a class="btn btn-primary" href="/admin/listPromotions">Quay lại màn hình giảm giá</a>
                         </form>
                     </div>
                 </div>
