--- a/src/main/resources/templates/checkout_form.html
+++ b/src/main/resources/templates/checkout_form.html
@@ -345,7 +345,7 @@
                                                     </tr>
                                                     <tr class="shipping-cost">
                                                         <td>Mã giảm giá</td>
-                                                        <td th:if="${promotion!=null}" th:text="${promotion.discount}+'%' +' ( max: ' + ${promotion.maxdiscount} +' $ )'"></td>
+                                                        <td th:if="${promotion!=null}" th:text="${promotion.discount}+'%' +' ( max: ' + ${promotion.maxdiscount} +' VND )'"></td>
                                                         <td th:if="${promotion==null}">Không có mã giảm giá </td>
                                                     </tr>
                                                     <tr>
